tests/specs/ts_template_with_args.txt
# mod.ts
export const tpl: `test${number}` = `test1`;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:14
  | 
1 | export const tpl: `test${number}` = `test1`;
  |              ^

# output.txt
Defined in file:///mod.ts:1:14

const tpl: `test${number}`


# output.json
[
  {
    "name": "tpl",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 13,
      "byteIndex": 13
    },
    "declarationKind": "export",
    "kind": "variable",
    "variableDef": {
      "tsType": {
        "repr": "test${number}",
        "kind": "literal",
        "literal": {
          "kind": "template",
          "tsTypes": [
            {
              "repr": "test",
              "kind": "literal",
              "literal": {
                "kind": "string",
                "string": "test"
              }
            },
            {
              "repr": "number",
              "kind": "keyword",
              "keyword": "number"
            },
            {
              "repr": "",
              "kind": "literal",
              "literal": {
                "kind": "string",
                "string": ""
              }
            }
          ]
        }
      },
      "kind": "const"
    }
  }
]
